// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination itemCount < pageSize 1`] = `
<div>
  <div
    class="horizontal layout-spacing-undefined main container padding padding-top padding-top-medium padding-bottom padding-bottom-medium flex flex-align flex-align-center-center flex-distribution flex-distribution-space-between"
  >
    <span
      class="font main text inline inline-true"
    >
      Showing 
      <strong>
        5
      </strong>
       of 
      <strong>
        5
      </strong>
    </span>
  </div>
</div>
`;

exports[`Pagination pageCount < 8 1`] = `
<div>
  <div
    class="horizontal layout-spacing-undefined main container padding padding-top padding-top-medium padding-bottom padding-bottom-medium flex flex-align flex-align-center-center flex-distribution flex-distribution-space-between"
  >
    <span
      class="font main text inline inline-true"
    >
      Showing 
      <strong>
        1
      </strong>
       - 
      <strong>
        10
      </strong>
       of
       
      <strong>
        30
      </strong>
    </span>
    <div
      class="horizontal layout-spacing-small main spacing spacing-small"
    >
      <button
        class="bp3-button bp3-disabled font button main intent intent-primary"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          1
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal font button main intent intent-none"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          2
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal font button main intent intent-none"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination pageCount >= 8 1`] = `
<div>
  <div
    class="horizontal layout-spacing-undefined main container padding padding-top padding-top-medium padding-bottom padding-bottom-medium flex flex-align flex-align-center-center flex-distribution flex-distribution-space-between"
  >
    <span
      class="font main text inline inline-true"
    >
      Showing 
      <strong>
        1
      </strong>
       - 
      <strong>
        10
      </strong>
       of
       
      <strong>
        100
      </strong>
    </span>
    <div
      class="horizontal layout-spacing-small main spacing spacing-small"
    >
      <button
        class="bp3-button bp3-disabled font button main intent intent-primary"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          1
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal font button main intent intent-none"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          2
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal font button main intent intent-none"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          3
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal font button main intent intent-none"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          4
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal font button main intent intent-none"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          5
        </span>
      </button>
      <div
        class="bp3-popover-wrapper main bp3-fill"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <button
              class="bp3-button bp3-minimal font button iconOnly main"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-more main padding padding-undefined"
                icon="more"
              >
                <svg
                  data-icon="more"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    more
                  </desc>
                  <path
                    d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <button
        class="bp3-button bp3-minimal font button main intent intent-none"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          10
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal font button iconOnly main style style-marginRight style-marginRight-var(--spacing-medium)"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-right main padding padding-undefined"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
